# HistoAnalyzer

./: .gitattributes  .gitignore  .zenodo.json  BUILD_FIX_v1.0.1.md  BUNDLED_CLASSIFIERS_v1.0.4.md  BUNDLED_CLASSIFIER_BUILD_FIX_v1.0.6.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTANSEG_USER_CACHE_FIX_v1.0.9.md  LICENSE  MANIFEST.in  OPENCV_ML_PATCH_README.txt  OPENCV_ML_RUNTIME_FIX_v1.0.3.md  README.md  README_FIRST.md  SECURITY.md  THIRD_PARTY_NOTICES.md  WINDOWS_INNO_SETUP_INVOCATION_FIX_v1.0.8.md  WINDOWS_PIP_CLEANUP_FIX_v1.0.5.md  WINDOWS_PORTABLE_README_BUILD_FIX_v1.0.7.md  codemeta.json  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  run_histoanalyzer.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  metadata.yml
classifiers/: AnthraJuly06.json  README.md  TissueClassifierANNFullJuly06.json
docs/: BUILDING.md  INSTANSEG_EARLY_RUNTIME_FIX.md  INSTANSEG_MODEL_CACHE.md  NUCLEUS_CLASSIFICATION.md  TRAINING.md  USAGE.md  WINDOWS_PORTABLE_README.txt  ZENODO_RELEASE.md
examples/: job.example.json
scripts/: build_linux.sh  build_macos.sh  build_windows.ps1  make_icons.py  sync_bundled_classifiers.py  validate_build_layout.py  verify_opencv_ml.py
src/histoanalyzer/: __init__.py  __main__.py  engine.py  job.py  nucleus_classification.py  resources.py  runtime_env.py  worker.py
src/histoanalyzer/gui/: __init__.py  main_window.py
src/histoanalyzer/resources/classifiers/: DABCNNThreshold0.17DAB.json
tests/: test_build_layout.py  test_bundled_classifiers.py  test_instanseg_runtime_cache.py  test_job_config.py  test_metadata.py  test_nucleus_classification.py  test_opencv_build_contract.py  test_runtime_home_bootstrap.py  test_windows_installer_invocation.py  test_windows_opencv_cleanup.py  test_windows_portable_packaging.py  test_worker_arguments.py
