[build-system]
requires = ["setuptools>=70", "wheel>=0.44"]
build-backend = "setuptools.build_meta"

[project]
name = "HistoAnalyzer"
version = "1.0.6"
description = "Cross-platform H-DAB histology analysis with QuPath classifier JSON support, InstanSeg nuclei segmentation, and Tumor/Stroma/Other quantification."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {file = "LICENSE"}
authors = [
  {name = "José Rodríguez-Rojas"}
]
keywords = [
  "digital pathology", "histology", "H-DAB", "InstanSeg", "nuclei segmentation",
  "tumor stroma", "image analysis", "QuPath"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "PySide6>=6.7,<7",
  "numpy>=1.24,<3",
  "opencv-python-headless==4.10.0.84",
  "tifffile>=2023.9",
  "zarr>=2,<3",
  "Pillow>=10",
  "scipy>=1.11",
  "scikit-image>=0.21",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  "shapely>=2.0",
  "instanseg-torch>=0.1.1",
]

[project.optional-dependencies]
wsi = ["openslide-python>=1.3", "openslide-bin>=4.0.0.6"]
build = ["pyinstaller>=6.11", "setuptools>=70", "wheel>=0.44"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.11", "build>=1.2"]

[project.scripts]
histoanalyzer = "histoanalyzer.__main__:main"

[project.gui-scripts]
HistoAnalyzer = "histoanalyzer.__main__:main"

[project.urls]
Homepage = "https://github.com/Juaco2r/HistoAnalyzer"
Repository = "https://github.com/Juaco2r/HistoAnalyzer"
Issues = "https://github.com/Juaco2r/HistoAnalyzer/issues"
Documentation = "https://github.com/Juaco2r/HistoAnalyzer/tree/main/docs"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
histoanalyzer = ["assets/*", "resources/classifiers/*.json"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
